fix: correct color to resolve contrast

--- a/style.css
+++ b/style.css
@@ -778,7 +778,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #C34E13;
 }
 
 .tc-white {
@@ -786,12 +786,12 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #C34E13;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #C34E13!important;
     color: #FFFFFF!important;
 }
 
